--- a/style.css
+++ b/style.css
@@ -2,39 +2,112 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  
-    
-    
 }
-html { 
-    overflow-y: hidden; 
-}
-
-
 
 body {
-    
-    height: 5vh;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(0, 0, 0);
+    background-color: #FFF1E6;
     
 }
-/* Adding background color to nav bar*/
-/* To style the links inside the nav bar*/
+
+
+
+.carousel {
+    position: relative;
+    height: 600px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.carousel_images {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.carousel_track-container {
+    background: lightgreen;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+.carousel_track {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    position: relative;
+    height: 100%;
+    transition: transform 250ms ease-in;
+}
+/* Stacking of images*/
+.carousel_slide {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+.carousel_button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+}
+
+.carousel_button--left {
+    left: -40px;
+}
+.carousel_button--right {
+    right: -40px;
+}
+.carousel_button img {
+    width: 12px;
+
+}
+
+.carousel_nav {
+    /*background: pink; */
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+}
+.carousel_indicator {
+    border: 0;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    background:rgba(0, 0, 0, .3);
+    margin: 0 12px;
+    cursor: pointer;
+}
+
+.carousel_indicator.current-slide {
+    background: rgba(0,0,0,.75);
+}
+    
+.is-hidden {
+    display: none; 
+}
+
+
+.heading {
+   display: block;
+   position: absolute;
+}
+
+
 
 .nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: black;
+    background-color: #A5A58D;
     overflow: hidden;
-    font-family: 'Poppins', sans-serif;
 }
 
 .nav 
 a {
-    color: rgb(53, 204, 16);
+    color: rgb(63, 62, 62);
     /*text-align: center;*/
     padding: 14px 16px; 
     text-decoration: none;
@@ -54,97 +127,6 @@ a {
 /* Changing the color of links on hover*/
 .nav a:hover {
     background-color: rgb(66, 65, 65);
-    color: black;
+    color: #A5A58D;
 }
 
-/* Image border style*/
-.photo, 
-img {
-    position: relative;
-    top: -150px;
-    width: 53%;
-    margin-right: 50px;
-    height: auto;
-    float: right;
-}
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-  }
-
-/* Instagram */
-.fa-instagram {
-    background: #030303;
-    color: white;
-}
-  
-  /* Twitter */
-.fa-twitter {
-    background: #070707;
-    color: white;
-}
-/* Email envelope*/
-.fa-envelope {
-    background: #030303;
-    color: white;
-}
-
-
-
- 
-.about {
-    height: 300vh;
-    display: flex;
-}
-.about-title {
-    width: 50%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.about-pages {
-    width: 50%;
-
-}
-.about-pages div {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-/* screen split here*/
-
-.leftside, .rightside {
-    height: 100vh;
-    width: 100%;
-}
-.leftside {
-    background: black;
-
-}
-.rightside {
-    background: yellow;
-}
-
-/* New Intro Text*/
-
-
-.intro {
-    color:rgb(145, 209, 61);
-    font-weight: bold;
-    font-size: 90px;
-    margin-left: 190px;
-    margin-top: 3%;
-    font-family: 'Russo One', sans-serif;
-  
-
-}
-
-
-/* Start https://www.cursors-4u.com */ * {cursor: url(https://ani.cursors-4u.net/cursors/cur-11/cur1089.cur), auto !important;} /* End https://www.cursors-4u.com */
