--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ body {
 }
 
 .carousel_nav {
-    /*background: pink; */
     display: flex;
     justify-content: center;
     padding: 10px 0;
@@ -91,8 +90,14 @@ body {
 
 
 .heading {
-   display: block;
    position: absolute;
+   width: 100%;
+   height: 100%;
+   top: 45%;
+   z-index: 10;
+   text-align: center;
+   
+   
 }
 
 
@@ -130,3 +135,32 @@ a {
     color: #A5A58D;
 }
 
+/* Instagram live feed */
+
+.tagembed-container {
+     margin-top: 150px;
+    
+}
+
+.my-story {
+    background-color: rgb(198, 236, 225);
+    height: 500px;
+    width: 100%;
+    padding: 120px 0;
+    border:black;
+    margin-top: 10% 
+   
+    
+}
+.my-story  p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2%;
+}
+.my-story h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
